--- a/Master.css
+++ b/Master.css
@@ -121,8 +121,60 @@ h2::after{
 }
 /*Example: Hide starting at `min-width: 0`, and then show at the `sm` breakpoint*/
 @media (max-width: 390px) {
-    body {
-        display: none;
+    .header {
+        width: 100%;
+        height: 270px;  
+    }
+    .header div:first-child {
+        transform: translate(0, 25px);
+    }
+    .header h2::before {
+        width: 50px;
+        height: 50px;
+        top: 50%;
+    }
+    .header h2::after {
+        font-size: 50px;
+        transform: translate(-25px, 100px);
+    }
+    .header div {
+        font-size: 20px;
+        transform: translate(0, 190px);
+    }
+    .header p{
+        width: 215px;
+        transform: translate(0px, 222px);
+        font-size: 13px;
+    }
+    .header p:first-of-type {
+        transform: translate(0px, 12em);
+        font-size: 13px;
+    }
+    .body h3 {
+        font-size: 15px;
+        padding: 10px;
+    }
+    .body div {
+        font-size: 15px;
+    }
+    .body div>span:last-child {
+        left: 75%;
+    }
+    .cont {
+        background-color: #36467a;
+        top: 84%;
+        left: 8%;
+        width: 85%;
+        height: 50px;
+        padding: 15px;
+        font-size: 15px;
+    }
+    .attribution {
+        font-size: 11px;
+        text-align: center;
+        position: absolute;
+        top: 63em;
+        left: 0rem;
     }
 }
 
